<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">지트에듀케이션</string>
    <string name="naver_client_id">rgpXsHhCrIIsnNDKbJbN</string>
    <string name="naver_client_secret">FVBJSKIhIC</string>
    <string name="naver_client_name">지트에듀케이션 학부모앱</string>
    <string name="kakao_native_app_key">89195e5ca171ce4a8f165563f5718ff8</string>
    <string name="kakao_redirection_scheme">kakao89195e5ca171ce4a8f165563f5718ff8</string>
    <string name="default_notification_channel_id">jeet_education_app_channel_id</string>
    <string name="default_notification_headup_channel_id">jeet_education_app_channel_id_headup</string>
    <string name="consult_notification_headup_channel_id">jeet_education_app_channel_id_headup_consult</string>
    <string name="msg_intro_request_permission">앱의 기능을 정상적으로 사용하기 위해 권한이 필요합니다. 안내되는 권한을 허용해 주세요.</string>
    <string name="msg_intro_denied_permission">설정 > 권한 에서 권한을 허용할 수 있습니다.</string>
    <string name="intro_failed_request_permission">원활한 이용을 위해 권한을 허용해 주세요.</string>
    <string name="title_permission_accept">허용</string>
    <string name="title_permission_close">종료</string>
    <string name="title_permission_setting">설정</string>
    <string name="teacher_impossible_login">관리자는 관리자 앱에서 로그인해주세요.</string>
    <string name="parents">학부모</string>
    <string name="student">원생</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="auto_login">자동 로그인</string>
    <string name="join">회원가입</string>
    <string name="find_id_pw">계정 찾기</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="msg_continue">계속하기</string>
    <string name="pay">납부하기</string>
    <string name="new_member">신규원생</string>
    <string name="stu">재원생</string>
    <string name="stu_non">비재원생</string>
    <string name="id_pattern">0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM_-</string>
    <string name="title_main_school">학교</string>
    <string name="title_memo">메모</string>
    <string name="dialog_title_alarm">알림</string>
    <string name="dialog_title_alarm_tuition">교습비 알림</string>
    <string name="dialog_title_alarm_attend">출결 알림</string>
    <string name="dialog_title_notice">공지</string>
    <string name="dialog_title_error">오류</string>
    <string name="dialog_title_pw_confirm">사용자 확인</string>
    <string name="dialog_content_close">작성한 항목이 모두 사라집니다. 현재 화면을 종료하시겠습니까?</string>
    <string name="find_type">검색 구분</string>
    <string name="find_type_id">아이디 찾기</string>
    <string name="find_type_pw">비밀번호 찾기</string>
    <string name="msg_find_id">회원님의 아이디는 [%s] 입니다.</string>
    <string name="msg_find_snsid">[%s] 를 통하여 회원가입되어 있습니다. \n[%s] 로 로그인 해 주세요.</string>
    <string name="msg_find_pw">회원님의 임시 비밀번호를 SMS로 전송하였습니다.\n로그인 후 비밀번호를 변경해 주세요.</string>
    <string name="msg_instant_pw">[지트에듀케이션] 회원님의 임시 비밀번호는 %s 입니다.</string>
    <string name="msg_already_login_in">이미 로그인된 사용자입니다.</string>
    <string name="msg_password_mismatch">비밀번호가 일치하지 않습니다.</string>
    <string name="msg_parameter_binding_error">입력한 정보를 확인해주세요.</string>
    <string name="msg_user_gubun_mismatch">JEET 회원정보와 일치하지 않습니다.\n학원으로 문의해 주세요.\n(대표번호 : 031-276-8003)</string>
    <string name="msg_user_0_not_jeet_member">JEET 관리자가 아니면 회원가입/로그인을 할 수 없습니다.</string>
    <string name="msg_user_unknown">JEET 회원가입 중 문제가 발생하였습니다.\n학원으로 문의해 주세요.\n(대표번호 : 031-276-8003)</string>
    <string name="msg_pw_confirm">본인 확인에 필요한 \n비밀번호를 입력해주세요.</string>
    <string name="msg_confirm_logout">로그아웃 이후에는 알림 메시지를 받을 수 없습니다.\n로그아웃 하시겠습니까?\n</string>
    <string name="select">선택</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>
    <string name="terms_agree">약관동의</string>
    <string name="terms_agree_all">전체 동의</string>
    <string name="terms_agreement">이용약관</string>
    <string name="terms_agreement_private_info">개인정보취급방침</string>
    <string name="terms_agreement_msg">약관에 모두 동의하셔야 합니다.</string>
    <string name="join_member">회원가입</string>
    <string name="user_type">사용자 구분</string>
    <string name="name">이름</string>
    <string name="name_stu">원생 이름</string>
    <string name="birth">생년월일</string>
    <string name="tv_class">클래스 정보없음</string>
    <string name="gender">성별</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="school">학교</string>
    <string name="campus">캠퍼스</string>
    <string name="grade">학년</string>
    <string name="phonenumber">휴대폰번호</string>
    <string name="contact">연락처</string>
    <string name="email">이메일</string>
    <string name="title_main_subject">제목</string>
    <string name="title_main_content">내용</string>
    <string name="title_main_answer">답변</string>
    <string name="auth_request">인증요청</string>
    <string name="input_auth_number">인증번호 입력</string>
    <string name="auth_complete">인증이 완료되었습니다.</string>
    <string name="timeout">시간초과</string>
    <string name="please_date">상담 희망일을 선택해주세요.</string>
    <string name="please_bag">분류항목을 선택해주세요.</string>
    <string name="please_content">내용을 입력해주세요.</string>
    <string name="hint_input_subject">제목을 입력하세요.</string>
    <string name="hint_input_content">내용을 입력하세요.</string>
    <string name="loading_aca_info">캠퍼스 정보를 불러오는 중입니다. 잠시 후 다시 시도해주세요.</string>
    <string name="loading_bag_info">분류항목 정보를 불러오는 중입니다. 잠시 후 다시 시도해주세요.</string>
    <string name="check_duplicate">중복체크</string>
    <string name="duplicate_id">중복된 아이디입니다.</string>
    <string name="duplicate_phone_no">이미 사용 중인 휴대폰 번호입니다.</string>
    <string name="duplicate_user">이미 가입한 사용자입니다.</string>
    <string name="check_password">비밀번호를 숫자, 영문 포함 8자리 이상으로 입력해주세요.</string>
    <string name="check_password2">비밀번호에 동일한 문자를 과도하게 연속해서 사용할 수 없습니다.</string>
    <string name="empty_info">정보가 없습니다.</string>
    <string name="empty_name">이름 정보가 없습니다.</string>
    <string name="empty_user_info">사용자 정보가 없습니다.</string>
    <string name="empty_child_stu_info">자녀의 정보가 없습니다.</string>
    <string name="empty_phonenumber">휴대폰번호 정보가 없습니다.</string>
    <string name="msg_re_auth">휴대폰번호를 다시 인증해 주세요.</string>
    <string name="pattern_mismatch_phonenumber">휴대폰번호를 확인해주세요.</string>
    <string name="mismatch_phonenumber">인증번호가 상이합니다.</string>
    <string name="check_id_empty">아이디를 입력해 주세요.</string>
    <string name="check_name_pattern">이름 형식이 올바르지 않습니다.</string>
    <string name="check_id_min_length">아이디는 최소 4글자 이상 입력해주세요.</string>
    <string name="check_id_duplicate">아이디 중복체크 확인이 필요합니다.</string>
    <string name="password_does_not_match">비밀번호가 일치하지 않습니다.</string>
    <string name="password_pattern_not_match">비밀번호 형식을 확인해주세요.</string>
    <string name="password_empty">비밀번호를 입력해주세요.</string>
    <string name="singup_success">회원가입 되었습니다.</string>
    <string name="server_data_empty">알 수 없는 에러가 발생하였습니다.</string>
    <string name="server_error">서버 요청 중 에러가 발생하였습니다.</string>
    <string name="server_error_2">잘못된 접근입니다.</string>
    <string name="server_fail">서버 요청에 실패하였습니다.</string>
    <string name="server_not_found_board">해당 글이 존재하지 않습니다.</string>
    <string name="auth_number_msg">[지트에듀케이션] 인증번호는 [%d] 입니다.</string>
    <string name="check_auth_number">인증번호 시간이 초과 되었거나 정보가 일치하지 않습니다.</string>
    <string name="login_not_found_member">비밀번호가 일치하지 않거나 사용자 정보가 없습니다.</string>
    <string name="student_info">원생정보</string>
    <string name="loading">로딩중</string>
    <string name="requesting">요청중</string>
    <string name="hint_no_information">정보 없음</string>
    <string name="write_empty">필수 입력 항목이 누락되었는지 확인해주세요</string>
    <string name="write_before_study_empty">테스트 전까지 학습한 방법 항목을 입력해주세요</string>
    <string name="write_process_empty">진도/심화학습 여부를 입력해주세요</string>
    <string name="write_phone_impossible">연락처 항목이 올바르게 입력되었는지 확인해주세요</string>
    <string name="write_empty_2">항목에 입력해주세요</string>
    <string name="write_privacy_empty">동의항목에 체크해주세요</string>
    <string name="write_check_email">이메일 형식을 확인해주세요</string>
    <string name="main_student">원생</string>
    <string name="main_student_sub">님</string>
    <string name="main_student_campus">캠퍼스 정보없음</string>
    <string name="main_student_school_and_grade">학교 및 학년 정보없음</string>
    <string name="main_non_member_notice">학원에 등록하시고 더 많은 서비스를 이용해보세요</string>
    <string name="main_attendance_date">00.00.00</string>
    <string name="main_attendance">출석</string>
    <string name="main_not_attendance">미출석</string>
    <string name="main_null_attendance">출결정보</string>
    <string name="main_null_teacher">배정되지 않음</string>
    <string name="main_title">메인화면</string>
    <string name="main_menu_test_reserve_title">테스트예약</string>
    <string name="main_menu_student_info">원생정보</string>
    <string name="main_menu_announcement">공지사항</string>
    <string name="main_menu_announcement_new">최근 공지사항</string>
    <string name="main_menu_campus_schedule">캠퍼스일정</string>
    <string name="main_menu_notice">알림</string>
    <string name="main_menu_test_reserve">테스트예약</string>
    <string name="main_menu_bus_info">차량정보</string>
    <string name="title_bus_route_info">운행정보</string>
    <string name="main_menu_briefing_reserve">설명회예약</string>
    <string name="main_menu_attendance">출석부</string>
    <string name="main_menu_report_card">성적표</string>
    <string name="main_menu_qna">자주하는질문</string>
    <string name="main_menu_rollbook">시간표</string>
    <string name="main_menu_tuition">수강료 납부</string>
    <string name="settings_title">설정</string>
    <string name="settings_notice_system">시스템알림</string>
    <string name="settings_operation_policy">운영정책</string>
    <string name="settings_private_info_agreement">개인정보 수집 및 이용 동의</string>
    <string name="settings_app_info">앱정보</string>
    <string name="settings_app_version_update">신규 업데이트</string>
    <string name="settings_account_title">계정 관리</string>
    <string name="settings_notice_reception_state">알림 수신여부</string>
    <string name="settings_account_profile_title">프로필 정보 수정</string>
    <string name="settings_account_phone_title">전화번호 수정</string>
    <string name="settings_pw_title">비밀번호 수정</string>
    <string name="settings_sns_login">SNS 로그인</string>
    <string name="settings_account_un_link">계정 탈퇴</string>
    <string name="settings_logout">로그아웃</string>
    <string name="settings_phone_confirm_dialog_content">전화번호 변경을 위해 앱을 재시작 해야합니다. 재시작 하려면 완료 버튼을 누르세요.</string>
    <string name="settings_update_profile">프로필 정보를 변경하였습니다.</string>
    <string name="settings_update_pw">비밀번호를 변경하였습니다.</string>
    <string name="settings_update_pw_lenth">비밀번호는 8자 이상으로 입력해주세요.</string>
    <string name="description_leave">%s 앱의 회원계정을\n탈퇴하시겠습니까?</string>
    <string name="description_typing_agree">• 동의하시면 아래와 같이 입력해 주세요.</string>
    <string name="msg_agree">동의합니다</string>
    <string name="push_noti_received_announcement">공지사항 알림 도착</string>
    <string name="push_noti_received_attendance">출결 알림 도착</string>
    <string name="push_noti_received_counsel">상담요청 알림 도착</string>
    <string name="push_noti_received_leveltest">테스트예약 알림 도착</string>
    <string name="push_noti_received_pt">설명회예약 알림 도착</string>
    <string name="push_noti_received_system">시스템 알림 도착</string>
    <string name="push_noti_received_schedule">캠퍼스일정 알림 도착</string>
    <string name="push_noti_received_report_card">성적표 알림 도착</string>
    <string name="push_noti_received_tuition">미납 알림 도착</string>
    <string name="push_noti_received_qna">Q&amp;A 알림 도착</string>
    <string name="push_type_announcement">공지사항 알림</string>
    <string name="push_type_attendance">출결 알림</string>
    <string name="push_type_counsel">상담요청 알림</string>
    <string name="push_type_leveltest">테스트예약 알림</string>
    <string name="push_type_pt">설명회예약 알림</string>
    <string name="push_type_system">시스템 알림</string>
    <string name="push_type_report_card">성적표</string>
    <string name="hint_reportcard_content_short">전달사항</string>
    <string name="main_tv_first_notify">공지안내</string>
</resources>